--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,7 @@ csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_open_brace = all
 
  # ReSharper properties
+resharper_braces_for_foreach = required
 resharper_braces_for_ifelse = required
 resharper_csharp_empty_block_style = multiline
 resharper_csharp_remove_blank_lines_near_braces_in_code = false
