--- a/PhotoOrganizer.Console/PhotoOrganizer.Console.csproj
+++ b/PhotoOrganizer.Console/PhotoOrganizer.Console.csproj
@@ -5,6 +5,17 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>PhotoOrganizer</AssemblyName>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Spectre.Console" Version="0.48.0" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PhotoOrganizer.Core\PhotoOrganizer.Core.csproj" />
+    </ItemGroup>
 
 </Project>
