--- a/PhotoOrganizer.Console/PhotoOrganizer.Console.csproj
+++ b/PhotoOrganizer.Console/PhotoOrganizer.Console.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Spectre.Console" Version="0.48.0" />
       <PackageReference Include="Spectre.Console.Cli" Version="0.48.0" />
+      <PackageReference Include="Spectre.Console.Json" Version="0.48.0" />
     </ItemGroup>
 
     <ItemGroup>
