--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,8 @@ updates:
     schedule:
       interval: "daily" 
     open-pull-requests-limit: 10 
+    allow:
+      - dependency-name: "*"
+    ignore:
+      - dependency-name: "FluentAssertions"
+        versions: [">=8.0.0"]  # Ignore updates to FluentAssertions version 8.x.x or higher since that has a paid license
